Ensure article content cannot overflow.

--- a/frontends/Scss/somanyfeeds.scss
+++ b/frontends/Scss/somanyfeeds.scss
@@ -308,6 +308,7 @@ article {
 
   .content {
     line-height: 1.6;
+    overflow-x: auto;
   }
 }
 
